--- a/package.json
+++ b/package.json
@@ -1,16 +1,10 @@
 {
-  "name": "listr2",
-  "version": "1.0.0-development",
+  "name": "listr-cs",
+  "version": "0.0.1",
   "description": "Terminal task list reborn! Create beautiful CLI interfaces via easy and logical to implement task lists that feel alive and interactive.",
   "license": "MIT",
-  "repository": "https://github.com/cenk1cenk2/listr2",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
-  "author": {
-    "name": "Cenk Kilic",
-    "email": "cenk@kilic.dev",
-    "url": "https://srcs.kilic.dev"
-  },
   "engines": {
     "node": ">=10.0.0"
   },
